--- a/ippeveselfcert/index.html
+++ b/ippeveselfcert/index.html
@@ -67,6 +67,7 @@ a.nav-link.active {
 
     <ul>
       <li><a href="https://ftp.pwg.org/pub/pwg/tools/sw-ippeveselfcert11-20210517-windows.msi">IPP Everywhere&trade; Printer Self-Certification Tools v1.1 Update 3</a></li>
+      <li><a href="https://ftp.pwg.org/pub/pwg/tools/sw-ippeveselfcert11-20220414-windows.msi">IPP Everywhere&trade; Printer Self-Certification Tools v1.1 Update 4 (BETA)</a></li>
       <li><a href="http://support.apple.com/kb/DL999">Bonjour for Windows (Required)</a></li>
     </ul>
 
@@ -93,6 +94,7 @@ cd "C:\Program Files\IPP Everywhere Printer Self-Certification Tools"
     <p>First download and extract the current self-certification tools for macOS:</p>
     <ul>
       <li><a href="https://ftp.pwg.org/pub/pwg/tools/sw-ippeveselfcert11-20210517-macos.zip">IPP Everywhere&trade; Printer Self-Certification Tools v1.1 Update 3</a></li>
+      <li><a href="https://ftp.pwg.org/pub/pwg/tools/sw-ippeveselfcert11-20220414-macos.zip">IPP Everywhere&trade; Printer Self-Certification Tools v1.1 Update 4 (BETA)</a></li>
     </ul>
 
     <p>Extract the PWG Raster files to the tools directory, then open a Terminal window and run the following commands with "Printer Name" replaced by the DNS-SD service name of your printer:</p>
@@ -118,6 +120,7 @@ cd <em>/path/to/tools</em>
     <p>First download and extract the current self-certification tools for RHEL:</p>
     <ul>
       <li><a href="https://ftp.pwg.org/pub/pwg/tools/sw-ippeveselfcert11-20210517-rhel.tar.gz">IPP Everywhere&trade; Printer Self-Certification Tools v1.1 Update 3</a></li>
+      <li><a href="https://ftp.pwg.org/pub/pwg/tools/sw-ippeveselfcert11-20220414-rhel.tar.gz">IPP Everywhere&trade; Printer Self-Certification Tools v1.1 Update 4 (BETA)</a></li>
     </ul>
 
     <p>Extract the PWG Raster files to the tools directory, then open a Terminal window and run the following commands with "Printer Name" replaced by the DNS-SD service name of your printer:</p>
@@ -143,6 +146,7 @@ cd <em>/path/to/tools</em>
     <p>First download and extract the current self-certification tools for Ubuntu:</p>
     <ul>
       <li><a href="https://ftp.pwg.org/pub/pwg/tools/sw-ippeveselfcert11-20210517-ubuntu.tar.gz">IPP Everywhere&trade; Printer Self-Certification Tools v1.1 Update 3</a></li>
+      <li><a href="https://ftp.pwg.org/pub/pwg/tools/sw-ippeveselfcert11-20220414-ubuntu.tar.gz">IPP Everywhere&trade; Printer Self-Certification Tools v1.1 Update 4 (BETA)</a></li>
     </ul>
 
     <p>Extract the PWG Raster files to the tools directory, then open a Terminal window and run the following commands with "Printer Name" replaced by the DNS-SD service name of your printer:</p>
