--- a/members.html
+++ b/members.html
@@ -177,10 +177,10 @@ layout: bare
     <h2 id="FORMS">Documents and Forms</a></h3>
 
     <ol>
-      <li><a href="/chair/membership_docs/pwg_membership_form.pdf">PWG Membership Form</a></li>
-      <li><a href="/chair/membership_docs/pwg-process30.pdf">Printer Working Group Standards Process document</a></li>
-      <li><a href="/chair/membership_docs/pwg-ip-policy.pdf">Printer Working Group Policy on Intellectual Property and Confidentiality</a> (formerly called the PWG Patent Policy)</li>
-      <li><a href="/chair/membership_docs/pwg-loa.pdf">PWG Letter of Assurance for Essential Patents</a></li>
+      <li><a href="https://www.pwg.org/chair/membership_docs/pwg_membership_form.pdf">PWG Membership Form</a></li>
+      <li><a href="https://www.pwg.org/chair/membership_docs/pwg-process30.pdf">Printer Working Group Standards Process document</a></li>
+      <li><a href="https://www.pwg.org/chair/membership_docs/pwg-ip-policy.pdf">Printer Working Group Policy on Intellectual Property and Confidentiality</a> (formerly called the PWG Patent Policy)</li>
+      <li><a href="https://www.pwg.org/chair/membership_docs/pwg-loa.pdf">PWG Letter of Assurance for Essential Patents</a></li>
       <li>ISTO Bylaws (No longer published publicly - <a href="mailto:chair@pwg.org?subject=Request%20for%20ISTO%20Bylaws">Request Copy</a>)</li>
       <li>ISTO Articles of Incorporation (No longer published publicly - <a href="mailto:chair@pwg.org?subject=Request%20for%20ISTO%20Articles%20of%20Incorporation">Request Copy</a>)</li>
       <li>ISTO Program Participation Agreement (PPA) (<a href="mailto:chair@pwg.org?subject=Request%20for%20ISTO%20PPA">Request Copy</a>)
