--- a/ippsample/index.html
+++ b/ippsample/index.html
@@ -7,9 +7,9 @@ project: ippsample
 
 <h2 id="about">About the IPP Sample Code</h2>
 
-<p>The <code>ippsample</code> project provides sample implementations of IPP Clients, Printers, and Proxies. It is largely based upon the <a href="https://www.cups.org/" target="_blank">CUPS</a> software with substantial changes to the <code>ippproxy</code> and <code>ippserver</code> implementations to make them more general-purpose and configurable. The project also includes two transform programs, <code>ipptransform</code> for 2D printing and <code>ipptransform3d</code> for 3D printing, as well as a "lint" program (<code>ippdoclint</code>) for validating document data in automated test environments.</p>
+<p>The <code>ippsample</code> project provides sample, non-production-ready  implementations of IPP Clients, Printers, and Proxies. It makes use of the <a href="https://github.com/OpenPrinting/libcups" target="_blank">CUPS Library v3</a> and <a href="https://github.com/michaelrsweet/pdfio" target="_blank">PDFio library</a> projects to provide low-level HTTP, IPP, and PDF support.  The <code>ippserver</code> and <code>ipp3dprinter</code> code was also inspired by the original CUPS <code>ippeveprinter</code> source code. The project also includes two transform programs, <code>ipptransform</code> for 2D printing and <code>ipptransform3d</code> for 3D printing, as well as a "lint" program (<code>ippdoclint</code>) for validating document data in automated test environments.</p>
 
-<p>The server implements most IPP standards including <a href="https://www.pwg.org/ipp/everywhere.html" target="_blank">IPP Everywhere&trade;</a> and includes transform support for 2D and 3D printing. A beta snap is available for Linux systems, with macOS and Windows binaries planned for the 1.0 release.</p>
+<p>The server implements most IPP standards including <a href="https://www.pwg.org/ipp/everywhere.html" target="_blank">IPP Everywhere&trade;</a> and includes transform support for 2D and 3D printing. A beta snap is available for Linux systems.</p>
 
 
 <h2 id="contributing">Contributing</h2>
@@ -23,10 +23,6 @@ project: ippsample
 
 <p>The <code>ippdoclint</code> program validates document data in a variety of formats, allowing for automated testing of IPP clients.</p>
 
-<h3 id="ippfind">ippfind <a class="badge badge-primary" href="ippfind.html">Man Page</a></h3>
-
-<p>The <code>ippfind</code> program implements Bonjour/DNS-SD discovery of IPP printers and can be used to find and test specific printers. Among other things, it is used as part of the <a href="../ippeveselfcert/index.html">IPP Everywhere&trade; Printer Self-Certification</a> test tools.</p>
-
 <h3 id="ippproxy">ippproxy <a class="badge badge-primary" href="ippproxy.html">Man Page</a></h3>
 
 <p>The <code>ippproxy</code> program implements a generic IPP Proxy interface that allows you to connect a local IPP, PCL, or G-code printer to an IPP Infrastructure Printer such as the <code>ippserver</code> program.</p>
@@ -34,10 +30,6 @@ project: ippsample
 <h3 id="ippserver">ippserver <a class="badge badge-primary" href="ippserver.html">Man Page</a></h3>
 
 <p>The <code>ippserver</code> program implements most IPP standards and is commonly used for prototyping and automated testing. It provides a generic IPP Printer interface that allows you to share printers locally or using the IPP Shared Infrastructure Extensions. Printers can be configured to use authentication and/or to provide transforms using the included or third-party programs. A scriptable web interface allows for a variety of automated testing opportunities.</p>
-
-<h3 id="ipptool">ipptool <a class="badge badge-primary" href="ipptool.html">Man Page</a> <a class="badge badge-secondary" href="ipptoolfile.html">Test File Format</a></h3>
-
-<p>The <code>ipptool</code> program implements a generic IPP Client interface that allows a user to send different IPP requests and act based on the response from the Printer. Among other things, it is used as part of the <a href="../ippeveselfcert/index.html">IPP Everywhere&trade; Printer Self-Certification</a> test tools.</p>
 
 <h3 id="ipptransform">ipptransform <a class="badge badge-primary" href="ipptransform.html">Man Page</a></h3>
 
@@ -50,8 +42,8 @@ project: ippsample
 
 <h2 id="legal">Legal Stuff</h2>
 
-<p>Copyright © 2014-2018 by the IEEE-ISTO Printer Working Group.<br>
-Copyright © 2007-2018 by Apple Inc.<br>
+<p>Copyright © 2014-2023 by the IEEE-ISTO Printer Working Group.<br>
+Copyright © 2007-2019 by Apple Inc.<br>
 Copyright © 1997-2007 by Easy Software Products.</p>
 
 <p>This software is provided under the terms of the Apache License, Version 2.0. A copy of this license can be found in the file <a href="https://github.com/istopwg/ippsample/blob/master/LICENSE">LICENSE</a>. Additional legal information is provided in the file <a href="https://github.com/istopwg/ippsample/blob/master/NOTICE">NOTICE</a>.</p>
