--- a/ipp/index.html
+++ b/ipp/index.html
@@ -120,6 +120,12 @@ layout: bare
     <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippeveselfcert20-20220510-rev.pdf">Redlined</a>
     (Initial Draft - Last Updated May 10, 2022)</p>
 
+    <p>IPP OAuth Extensions v1.0:
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippoauth10-20230515.pdf">Clean</a>
+    &middot;
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippoauth10-20230515-rev.pdf">Redlined</a>
+    (Interim Draft - Last Updated May 15, 2023)</p>
+
     <p>Internet Printing Protocol/2.x Fourth Edition (BASE), updating PWG 5100.12-2015:
     <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippbase23-20220809.pdf">Clean</a>
     &middot;
@@ -134,11 +140,7 @@ layout: bare
 
     <!--<h3>Registration Drafts</h3>-->
 
-    <h3>White Paper/Tech Brief/Best Practice Drafts</h3>
-
-    <p>Using OAuth with IPP v1.0:
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippoauth10-20230310.pdf">Clean</a>
-    (Initial Draft - Last Updated March 10, 2023)</p>
+    <!--<h3>White Paper/Tech Brief/Best Practice Drafts</h3>-->
 
   </div>
 </div>
